--- a/web/app/package.json
+++ b/web/app/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "midi-file": "^1.2.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "soundfont-player": "^0.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
