--- a/web/app/package.json
+++ b/web/app/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "tools:yamaha": "tsx tools/yamaha-to-midi.ts",
     "tools:compare": "tsx tools/compare-midi.ts",
-    "tools:compare-notes": "tsx tools/compare-midi-notes.ts"
+    "tools:compare-notes": "tsx tools/compare-midi-notes.ts",
+    "tools:compare-mapping": "tsx tools/compare-style-mapping.ts"
   },
   "dependencies": {
     "midi-file": "^1.2.4",
